[gd_scene load_steps=4 format=3 uid="uid://baq03t24bueiv"]

[ext_resource type="Script" uid="uid://dt1crload4fy3" path="res://scripts/pet.gd" id="1_k74vf"]

[sub_resource type="GDScript" id="GDScript_time"]
script/source = "extends Node

func _ready():
	# Configure pet properties
	var pet = get_parent()
	pet.pet_name = \"Concept of Time\"
	pet.draggable = false
	pet.moves_by_itself = true
	pet.hates_being_moved = true
	# Time only loves hour glass, hates everything else
	pet.preferred_objects = [\"HourGlass\"]
	pet.forbidden_objects = [\"Bath\", \"WaterGlass\", \"CardDeck\", \"Gameboy\", \"JamJar\", \"OutsideDoor\", \"Toast\", \"WoodenSpoon\", \"Puddle\"]
	# Custom satisfaction and wrath rates
	pet.satisfaction_decay_rate = 0.15  # Gets unsatisfied quickly
	pet.wrath_increase_rate = 0.05
	# Make sprite a nice green color
	if pet.has_node(\"Sprite/ColorRect\"):
		pet.get_node(\"Sprite/ColorRect\").color = Color(0.2, 0.7, 0.3)
"

[sub_resource type="CircleShape2D" id="CircleShape2D_usvai"]
radius = 50.0

[node name="Time" type="Area2D"]
script = ExtResource("1_k74vf")

[node name="TimeSetup" type="Node" parent="."]
script = SubResource("GDScript_time")

[node name="Label" type="Label" parent="."]
offset_left = -32.0
offset_top = -93.0
offset_right = 32.0
offset_bottom = -67.0
text = "Time"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_usvai")

[node name="SatisfactionBar" type="ProgressBar" parent="."]
modulate = Color(0.14902, 0.686275, 0.85098, 1)
offset_left = -40.0
offset_top = -69.0
offset_right = 40.0
offset_bottom = -59.0
show_percentage = false

[node name="WrathBar" type="ProgressBar" parent="."]
modulate = Color(0.866667, 0.12549, 0.12549, 1)
offset_left = -40.0
offset_top = -56.0
offset_right = 40.0
offset_bottom = -46.0
show_percentage = false

[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
